feat: add ability to enable and disable comments on an article

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -2,5 +2,7 @@
   "agora-comments-enabled": "Allow Comments",
   "agora-comments-header": "$1 Comments",
   "agora-comments-input-placeholder": "Add a comment about $1",
-  "agora-ve-placeholder": "What's on your mind?"
+  "agora-ve-placeholder": "What's on your mind?",
+  "agora-error-not-allowed": "You are unable to post comments.",
+  "restriction-commenting": "Commenting"
 }
