feat: add ability to restore a deleted comment and move some stuff to store

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -4,7 +4,7 @@
   "agora-comments-input-placeholder": "Add a comment about $1",
   "agora-ve-placeholder": "What's on your mind?",
   "agora-error-not-allowed": "You are unable to post comments",
-  "agora-error-not-allowed-delete": "You are unable to delete comments",
+  "agora-error-not-allowed-delete": "You are unable to delete or restore comments",
   "restriction-commenting": "Commenting",
   "agora-error-malformed-request": "The request was malformed. It must include either an articleId or parentId",
   "agora-error-malformed-wikitext": "The request was malformed. The request must contain the wikitext parameter",
@@ -19,6 +19,7 @@
   "agora-action-history": "History",
   "agora-error-comment-missing": "An error occurred. Comment could not be found.",
   "agora-error-actor-id-missing": "Could not retrieve actor id for user.",
-  "agora-error-delete-writes": "Deletion affected $1 rows, 1 expected",
-  "agora-comment-deleted": "Deleted"
+  "agora-error-delete-writes": "Deletion/Restoration affected $1 rows, 1 expected",
+  "agora-comment-deleted": "Deleted",
+  "agora-error-comment-not-deleted": "This comment cannot be restored as it is not marked as deleted."
 }
